Integrate dev flag in appveyor script: If the pushed commit has no tag or if the tag contains the "dev" substring, a dev build is built, i.e. "scons dev=True" Else, i.e. if a tag that does not contain "dev" is pushed, a normal (stable) release is built, i.e. "scons dev=False"

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,8 +8,10 @@ install:
     py -m pip install scons
 
     py -m pip install markdown
+before_build:
+- ps: $env:IS_DEV = ($env:APPVEYOR_REPO_TAG -eq "false") -or ($env:APPVEYOR_REPO_TAG_NAME -match "dev")
 build_script:
-- cmd: scons
+- cmd: scons dev=%IS_DEV%
 
 artifacts:
 - path: '*.nvda-addon'
