--- a/.github/workflows/upload-on-tag.yaml
+++ b/.github/workflows/upload-on-tag.yaml
@@ -11,6 +11,12 @@ jobs:
   buildAndUpload:
     runs-on: ubuntu-latest
     steps:
+    - name: Set my timezone  # Useful when I push a release tag containing the date of today.
+      uses: szenius/set-timezone@v1.0
+      with:
+        timezoneLinux: "Europe/Paris"
+    #- name: Test timezone
+    #  run: date +"%Z %z"
     - name: Checkout code
       uses: actions/checkout@v2
     - name: Set up Python 3.8
@@ -25,13 +31,16 @@ jobs:
     - name: Extract change log
       run: |
         import re
-        version = re.search(r'\s*refs/tags/[Vv](\d+.\d+.*?)(?:-dev-.*)?$', '${{ github.ref }}').group(1)
-        print('===${{ github.ref }}===')
+        pattern = r'\s*refs/tags/[Vv](\d+.\d+.*?)(?:-dev-.*)?$'
+        refTag = '${{ github.ref }}'
+        print(f'===> Ref tag:{refTag}')
+        version = re.search(pattern, refTag).group(1)
+        print(f'===> Version:{version}')
         pattern = rf'## Change log.*### Version {version}\s*(.*?)\s*(\n(### Version)|(\[\d+\]:)|$)'
         fileContent = open('README.md', 'r', encoding='utf8').read()
-        changeLog = re.search(pattern, fileContent, re.DOTALL).group(1)
-        with open('changelog.md', 'w', encoding='utf-8') as f:
-          f.write(changeLog)
+        changeLog = re.search(pattern, fileContent, re.DOTALL).group(1) + '\n'
+        print(f'===> ChangeLog:\n<<<{changeLog}>>>\n')
+        open('changelog.md', 'w', encoding='utf-8').write(changeLog)
       shell: python 
     
     - name: Build add-on
