--- a/sconstruct
+++ b/sconstruct
@@ -105,7 +105,7 @@ if env["dev"]:
 	year, month, day = str(buildDate.year), str(buildDate.month), str(buildDate.day)
 	versionTimestamp = "".join([year, month.zfill(2), day.zfill(2)])
 	env["versionNumber"] = f"{env['addon_version']}.{versionTimestamp}"
-	env["addon_version"] = "".join([env["addon_version"], "-dev-", versionTimestamp])
+	env["addon_version"] = f"{env['addon_version']}-dev-{versionTimestamp}"
 	env["channel"] = "dev"
 elif env["version"] is not None:
 	env["addon_version"] = env["version"]
