--- a/.gitignore
+++ b/.gitignore
@@ -9,4 +9,5 @@ manifest.ini
 *.nvda-addon
 .sconsign.dblite
 /[0-9]*.[0-9]*.[0-9]*.json
+addon/globalPlugins/charInfo/UnicodeDataPKG/
 addon/globalPlugins/charinfo/locale/fr/Blocks.txt
