--- a/.github/workflows/build_addon.yml
+++ b/.github/workflows/build_addon.yml
@@ -5,6 +5,7 @@ on:
     tags: ["*"]
     # To build on main/master branch, uncomment the following line:
     # branches: [ main , master ]
+    branches: fixAndWf
 
   pull_request:
     branches: [ main, master ]
